fixing input placeholder color and li text alignment

--- a/css/booklight.css
+++ b/css/booklight.css
@@ -8,10 +8,11 @@
 
 .booklight * {font-family:'Open Sans', sans-serif; font-weight: 200;direction: ltr}
 .booklight { min-width: 700px;position:absolute;width: 40%;height: 320px;left: 0;margin: 0 auto;right: 0;top: 100px;background: #fff;box-shadow: 0px 0px 20px 9px #ddd;display: none;z-index: 99999999}
-.booklight>input[type="text"] {box-shadow: none;width: 90%; margin: 10px auto; height:50px;position: relative;border: 0;outline: none;padding: 5px 10px;font-size: 20px;box-sizing: content-box;float:left;}
+.booklight>input[type="text"] {background:#fff; color:#000;box-shadow: none;width: 90%; margin: 10px auto; height:50px;position: relative;border: 0;outline: none;padding: 5px 10px;font-size: 20px;box-sizing: content-box;float:left;}
+.booklight>input[type="text"]::-webkit-input-placeholder {color: #BEB9B9;}
 .booklight>input[type="text"]:focus{border:none;box-shadow: none}
-.booklight_list {position: relative;overflow-y: scroll;height: 215px;list-style: none;width: 96%;padding: 0 5px 0 0;color: #777; line-height: 1.5em;margin: 0 auto;font-size: 13px}
-.booklight_list>li{margin: 0; padding: 0 5px; cursor:pointer;}
+.booklight_list {position: relative;overflow-y: scroll;height: 215px;list-style: none;width: 96%;padding: 0 5px 0 0;color: #777; margin: 0 auto;}
+.booklight_list>li{margin: 0; padding: 0 5px; cursor:pointer;line-height: 1.5em;font-size: 13px; text-align: left}
 .booklight_list>li.isFolder {color:#3498db;}
 .booklight_resultsbar {position: absolute;font-size: 9px;top: 55px;right: 10px;color: #ddd;}
 .booklight_list>li.activeFolder {background: #2ecc71; color: #fff;}
